# helical_pdqueiros

./: .env  .env-template  .gitignore  .terraform.lock.hcl  Dockerfile  Dockerfile-airflow  Dockerfile-cpu  Dockerfile-gpu  Dockerfile-ray-cpu  Dockerfile-ray-gpu  README.md  airflow.tf  docker-compose-airflow.yaml  docker-compose-build.yaml  docker-compose-infra.yaml  docker-compose-monitoring.yaml  docker-compose-ray.yaml  docker-compose-storage.yaml  docker-compose.yaml  env.sh  kuberay.tf  monitoring.tf2  pyproject.toml  terraform.tf  terraform.tfvars  test_env.sh
config/: airflow.cfg  airflow.yaml  otel-collector-config.yaml  prometheus.yaml  raycluster.yaml
config/monitoring/: prometheus.yaml
config/monitoring/provisioning/: datasource.yaml
config/monitoring/recipes/: airflow-dags.json  helical.json  readme.md  system-docker.json
dags/: hello_world.py  hello_world_kube_pod_operator.py  hello_world_python_operator.py
dags/cell_type_annotation/: dag_fine_tune.py  dag_process_data.py  dag_split_data.py  dags.py  model_training.py
dags/tests/: hello_world_python_operator.py  ray_dag.py  ray_test.py
images/: .$workflow.drawio.bkp  workflow.drawio
outputs/2025-11-05/22-40-13/.hydra/: hydra.yaml
outputs/2025-11-05/22-41-10/.hydra/: hydra.yaml
outputs/2025-11-05/22-44-04/.hydra/: hydra.yaml
outputs/2025-11-05/23-08-24/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-05/23-18-26/.hydra/: hydra.yaml
outputs/2025-11-05/23-18-44/.hydra/: hydra.yaml
src/helical_pdqueiros/: __main__.py  settings.py
src/helical_pdqueiros/core/: base_task.py  utils.py
src/helical_pdqueiros/core/cell_type_annotation/: data_processer.py  fine_tune.py  fine_tuner.py  fine_tuning.py  process_data.py  split_data.py
src/helical_pdqueiros/core/documents/: data_document.py
src/helical_pdqueiros/core/models/: model.py
src/helical_pdqueiros/dags/: annotate_cell_type.py  assets.py  definitions.py  io_managers.py  jobs.py  partitions.py  resources.py  sensors.py
src/helical_pdqueiros/dags/cell_type_annotation/: model_training.py  predict.py
src/helical_pdqueiros/io/: logger.py  mlflow_client.py  s3_client.py
src/helical_pdqueiros/jobs/: annotate_cell_type.py  base_job.py
tests/: create_sample_data.py
(+6 files in other folders)
