[project]
name = "helical_pdqueiros"
version = "0.0.1"
description = "Pod template for deploying Helical"
authors = [{ name = "Pedro Queiros", email = "coding.paradox013@passmail.net" }]
requires-python = "~=3.11"
readme = "README.md"
maintainers = [{ name = "Pedro Queiros", email = "coding.paradox013@passmail.net" }]
dependencies = [
    "retry",
    "ruff",
    "uuid6",
    "boto3",
    "helical",
    "mlflow",
    "anndata",
    "h5py",
    "ray[data,train,tune]==2.6.0",
    # "anndata @ git+https://github.com/helicalAI/anndata",
]

[dependency-groups]
dev = [
]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "helical_pdqueiros"
autoload_defs = true

# [tool.hatch.metadata]
# allow-direct-references = true

[project.urls]
Repository = "https://github.com/PedroMTQ/helical_pdqueiros.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 110
lint.select = ["E",  "W",  "F",  "I", "B"]
lint.ignore=["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]


