[project]
name = "helical_pdqueiros"
version = "0.0.1"
description = "Package for Helical-AI exercise"
authors = [{ name = "Pedro Queiros", email = "coding.paradox013@passmail.net" }]
requires-python = ">=3.11"
readme = "README.md"
maintainers = [{ name = "Pedro Queiros", email = "coding.paradox013@passmail.net" }]
dependencies = [
    "retry",
    "ruff",
    "python-dotenv",
    "uuid6",
    "boto3",
    "helical",
    "mlflow==3.5",
    "anndata",
    "h5py",
    # "anndata @ git+https://github.com/helicalAI/anndata",
]


[project.optional-dependencies]


[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "helical_pdqueiros"
autoload_defs = true

[project.scripts]
helical_pdqueiros = "helical_pdqueiros.__main__:main"

[project.urls]
Repository = "https://github.com/PedroMTQ/helical_pdqueiros.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 110
lint.select = ["E",  "W",  "F",  "I", "B"]
lint.ignore=["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]


